--- a/templates/bookstore/history-view.html
+++ b/templates/bookstore/history-view.html
@@ -92,70 +92,71 @@
 
     <main>
         <div class="container obs-container">
-            <h2>Featured Books</h2>
-            <div class="row">
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-            </div>
-            <h2>New Arrivals</h2>
-            <div class="row">
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
+            <h2>Order History</h2>
+            <hr>
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-lg-2 obs-book-display" style="padding: 0px !important;">
+                        <img src="https://dummyimage.com/730x1040/eee/aaa" />
+                    </div>
+                    <div class="col-lg-10">
+                        <div class="card-body">
+                            <h5 class="card-title">Book Title 1</h5>
+                            <p class="card-text">$20.00<br>Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                dolore eu fugiat nulla pariatur.</p>
+                            <button class="btn obs-button-primary">Order Detail</button>
+                            <button class="btn obs-button-primary">Reorder</button>
+                            <button class="btn obs-button-primary">Return</button>
+                            <p class="card-text"><small class="text-muted">Last purchased on 05/20/2020</small></p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <h2>Popular Reads</h2>
-            <div class="row">
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
+
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-lg-2 obs-book-display" style="padding: 0px !important;">
+                        <img src="https://dummyimage.com/730x1040/eee/aaa" />
+                    </div>
+                    <div class="col-lg-10">
+                        <div class="card-body">
+                            <h5 class="card-title">Book Title 2</h5>
+                            <p class="card-text">$20.00<br>Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                dolore eu fugiat nulla pariatur.</p>
+                            <button class="btn obs-button-primary">Order Detail</button>
+                            <button class="btn obs-button-primary">Reorder</button>
+                            <button class="btn obs-button-primary">Return</button>
+                            <p class="card-text"><small class="text-muted">Last purchased on 05/20/2020</small></p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
+            </div>
+
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-lg-2 obs-book-display" style="padding: 0px !important;">
+                        <img src="https://dummyimage.com/730x1040/eee/aaa" />
+                    </div>
+                    <div class="col-lg-10">
+                        <div class="card-body">
+                            <h5 class="card-title">Book Title 3</h5>
+                            <p class="card-text">$20.00<br>Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                dolore eu fugiat nulla pariatur.</p>
+                            <button class="btn obs-button-primary">Order Detail</button>
+                            <button class="btn obs-button-primary">Reorder</button>
+                            <button class="btn obs-button-primary" disabled>Return</button>
+                            <p class="card-text"><small class="text-muted">Last purchased on 01/20/2020</small></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -182,7 +183,8 @@
                     <div class="col-md-4">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA 30602</a></li>
+                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA
+                                    30602</a></li>
                             <li><i class="fas fa-envelope"></i> <a href="#">obs.uga@gmail.com</a></li>
                             <li><i class="fas fa-phone-alt"></i> <a href="#">(706) 542-2594</a></li>
                         </ul>
