--- a/templates/bookstore/retrun-view.html
+++ b/templates/bookstore/retrun-view.html
@@ -92,70 +92,57 @@
 
     <main>
         <div class="container obs-container">
-            <h2>Featured Books</h2>
-            <div class="row">
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-            </div>
-            <h2>New Arrivals</h2>
-            <div class="row">
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
+            <h2>Return</h2>
+            <hr>
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-lg-2 obs-book-display" style="padding: 0px !important;">
+                        <img src="https://dummyimage.com/730x1040/eee/aaa" />
+                    </div>
+                    <div class="col-lg-10">
+                        <div class="card-body">
+                            <h5 class="card-title">Order 1</h5>
+                            <p class="card-text">$120.00<br>Step 1: Mail the items back to us: 200 D. W. Brooks Drive,
+                                Athens, GA 30602<br>Step 2: Update us with the tracking code.<br>Step 3: Click on the
+                                return button.</p>
+                            <form class="form-inline row">
+                                <div class="col-sm-9">
+                                    <input class="form-control obs-button" style="width: 100%;" type="text"
+                                        placeholder="Tracking Code" aria-label="Search">
+                                </div>
+                                <div class="col-sm-3">
+                                    <button class="btn my-sm-0 obs-button-primary" style="width: 100%;"
+                                        type="submit">Return</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <h2>Popular Reads</h2>
-            <div class="row">
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
+
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-lg-2 obs-book-display" style="padding: 0px !important;">
+                        <img src="https://dummyimage.com/730x1040/eee/aaa" />
+                    </div>
+                    <div class="col-lg-10">
+                        <div class="card-body">
+                            <h5 class="card-title">Order item 1</h5>
+                            <p class="card-text">$20.00<br>Step 1: Mail the item back to us: 200 D. W. Brooks Drive,
+                                Athens, GA 30602<br>Step 2: Update us with the tracking code.<br>Step 3: Click on the
+                                return button.</p>
+                            <form class="form-inline row">
+                                <div class="col-sm-9">
+                                    <input class="form-control obs-button" style="width: 100%;" type="text"
+                                        placeholder="Tracking Code" aria-label="Search">
+                                </div>
+                                <div class="col-sm-3">
+                                    <button class="btn my-sm-0 obs-button-primary" style="width: 100%;"
+                                        type="submit">Return</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -182,7 +169,8 @@
                     <div class="col-md-4">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA 30602</a></li>
+                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA
+                                    30602</a></li>
                             <li><i class="fas fa-envelope"></i> <a href="#">obs.uga@gmail.com</a></li>
                             <li><i class="fas fa-phone-alt"></i> <a href="#">(706) 542-2594</a></li>
                         </ul>
