--- a/templates/bookstore/registration-confirmation.html
+++ b/templates/bookstore/registration-confirmation.html
@@ -53,28 +53,7 @@
                                 <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
                             </form>
                         </div>
-                        <a data-fancybox data-src="#obs-signup-modal" data-modal="true" href="javascript:;"><i
-                                class="fas fa-user-plus"></i> Signup</a>
-                        <div style="display: none;min-width:600px;" id="obs-signup-modal">
-                            <h2>Signup</h2>
-                            <form>
-                                <div class="form-group">
-                                    <label for="InputEmail1">Email address (Required)</label>
-                                    <input type="email" class="form-control" id="InputEmail1" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputPassword1">Password (Required)</label>
-                                    <input type="password" class="form-control" id="InputPassword1" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputPassword1">Repeat Password (Required)</label>
-                                    <input type="password" class="form-control" id="InputPassword1" required>
-                                </div>
-                                <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-                                <button type="submit" class="btn obs-button-primary">Signup</button>
-                                <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
-                            </form>
-                        </div>
+                        <a herf="#"><i class="fas fa-user-plus"></i> Register</a>
                     </div>
                 </div>
             </div>
