--- a/templates/bookstore/book-detail.html
+++ b/templates/bookstore/book-detail.html
@@ -38,7 +38,7 @@
                             <h2>Login</h2>
                             <form>
                                 <div class="form-group">
-                                    <label for="InputEmail1">Email address (Required)</label>
+                                    <label for="InputEmail1">Email address / User ID (Required)</label>
                                     <input type="email" class="form-control" id="InputEmail1" required>
                                 </div>
                                 <div class="form-group">
@@ -48,9 +48,12 @@
                                 <div class="form-group form-check">
                                     <input type="checkbox" class="form-check-input" id="Check1">
                                     <label class="form-check-label" for="remember">Remember me</label>
+                                    <br>
                                 </div>
                                 <button type="submit" class="btn obs-button-primary">Login</button>
                                 <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
+                                <br>
+                                <a href="#">Forget password?</a>
                             </form>
                         </div>
                         <a herf="#"><i class="fas fa-user-plus"></i> Register</a>
