--- a/templates/bookstore/admin-view.html
+++ b/templates/bookstore/admin-view.html
@@ -38,7 +38,7 @@
                             <h2>Login</h2>
                             <form>
                                 <div class="form-group">
-                                    <label for="InputEmail1">Email address / User ID (Required)</label>
+                                    <label for="InputEmail1">Email address (Required)</label>
                                     <input type="email" class="form-control" id="InputEmail1" required>
                                 </div>
                                 <div class="form-group">
@@ -48,12 +48,9 @@
                                 <div class="form-group form-check">
                                     <input type="checkbox" class="form-check-input" id="Check1">
                                     <label class="form-check-label" for="remember">Remember me</label>
-                                    <br>
                                 </div>
                                 <button type="submit" class="btn obs-button-primary">Login</button>
                                 <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
-                                <br>
-                                <a href="#">Forget password?</a>
                             </form>
                         </div>
                         <a herf="#"><i class="fas fa-user-plus"></i> Register</a>
@@ -95,48 +92,12 @@
 
     <main>
         <div class="container obs-container">
-            <h2>Book Details</h2>
+            <h2>Admin Center</h2>
             <hr>
-            <div class="row">
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-9">
-                    <h2>Elements of Programming Interviews in Python: The Insiders' Guide</h2>
-                    <span class="fa fa-star obs-checked"></span>
-                    <span class="fa fa-star obs-checked"></span>
-                    <span class="fa fa-star obs-checked"></span>
-                    <span class="fa fa-star obs-checked"></span>
-                    <span class="fa fa-star"></span>
-                    <p style="font-size: 25px;">$35.96</p>
-                    <strong>Description:</strong>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Viverra accumsan in nisl nisi scelerisque eu ultrices vitae
-                        auctor. Quam viverra orci sagittis eu. Sit amet dictum sit amet justo. Donec pretium vulputate
-                        sapien nec sagittis aliquam. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt
-                        lobortis feugiat.</p>
-                    <form class="form-inline">
-                        <div class="form-group mb-2">
-                            <input type="number" class="form-control" id="bookquantity" name="bookquantity" min="1"
-                                value="1">
-                        </div>
-                        <button type="submit" class="btn obs-button-primary mb-2 mx-sm-3">Add to Cart</button>
-                    </form>
-                </div>
-                <ul>
-                    <li>ISBN-10: 1537713949</li>
-                    <li>ISBN-13: 978-1537713946</li>
-                    <li>Category: Programming</li>
-                    <li>Author: Adnan Aziz </li>
-                    <li>Edition: 2nd</li>
-                    <li>Publisher: CreateSpace Independent Publishing Platform</li>
-                    <li>Publication Year: September 15, 2016</li>
-                    <li>Quantity-in-Stock: 5,000</li>
-                    <li>Minimum Threshold: 1</li>
-                    <li>Selling Price: $14.99</li>
-                </ul>
-            </div>
+            <p style="font-size: 25px;">Howdy, John!</p>
+            <button type="button" class="btn obs-button-primary btn-lg btn-block">Manage Books</button>
+            <button type="button" class="btn obs-button-primary btn-lg btn-block">Manage Users</button>
+            <button type="button" class="btn obs-button-primary btn-lg btn-block">Manage Promotions</button>
         </div>
     </main>
 
@@ -161,8 +122,7 @@
                     <div class="col-md-4">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA
-                                    30602</a></li>
+                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA 30602</a></li>
                             <li><i class="fas fa-envelope"></i> <a href="#">obs.uga@gmail.com</a></li>
                             <li><i class="fas fa-phone-alt"></i> <a href="#">(706) 542-2594</a></li>
                         </ul>
