--- a/templates/bookstore/edit-profile.html
+++ b/templates/bookstore/edit-profile.html
@@ -117,6 +117,10 @@
                                 placeholder="Username" aria-describedby="inputGroupPrepend2" value="jDoe" required>
                         </div>
                     </div>
+                    <div class="custom-control custom-checkbox" style="padding-bottom: 15px;">
+                        <input type="checkbox" class="custom-control-input" id="promote" checked>
+                        <label class="custom-control-label" for="promote">Sign up for promotions and lattest news.</label>
+                    </div>
                 </div>
                 <h3>Address Info</h3>
                 <div class="form-group">
