--- a/templates/bookstore/admin-manage-books-add-new-book.html
+++ b/templates/bookstore/admin-manage-books-add-new-book.html
@@ -38,7 +38,7 @@
                             <h2>Login</h2>
                             <form>
                                 <div class="form-group">
-                                    <label for="InputEmail1">Email address / User ID (Required)</label>
+                                    <label for="InputEmail1">Email address (Required)</label>
                                     <input type="email" class="form-control" id="InputEmail1" required>
                                 </div>
                                 <div class="form-group">
@@ -48,12 +48,9 @@
                                 <div class="form-group form-check">
                                     <input type="checkbox" class="form-check-input" id="Check1">
                                     <label class="form-check-label" for="remember">Remember me</label>
-                                    <br>
                                 </div>
                                 <button type="submit" class="btn obs-button-primary">Login</button>
                                 <button data-fancybox-close class="btn obs-button-primary">Cancel</button>
-                                <br>
-                                <a href="#">Forget password?</a>
                             </form>
                         </div>
                         <a herf="#"><i class="fas fa-user-plus"></i> Register</a>
@@ -95,47 +92,89 @@
 
     <main>
         <div class="container obs-container">
-            <h2>Book Details</h2>
+            <h2>Manage Books</h2>
             <hr>
             <div class="row">
                 <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
+                    <img style="padding-bottom: 20px;" src="https://dummyimage.com/730x1040/eee/aaa" />
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="validatedCustomFile" required>
+                        <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+                        <div class="invalid-feedback">Example invalid custom file feedback</div>
+                      </div>
                 </div>
                 <div class="col-md-9">
-                    <h2>Elements of Programming Interviews in Python: The Insiders' Guide</h2>
-                    <span class="fa fa-star obs-checked"></span>
-                    <span class="fa fa-star obs-checked"></span>
-                    <span class="fa fa-star obs-checked"></span>
-                    <span class="fa fa-star obs-checked"></span>
-                    <span class="fa fa-star"></span>
-                    <p style="font-size: 25px;">$35.96</p>
-                    <strong>Description:</strong>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Viverra accumsan in nisl nisi scelerisque eu ultrices vitae
-                        auctor. Quam viverra orci sagittis eu. Sit amet dictum sit amet justo. Donec pretium vulputate
-                        sapien nec sagittis aliquam. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt
-                        lobortis feugiat.</p>
-                    <form class="form-inline">
-                        <div class="form-group mb-2">
-                            <input type="number" class="form-control" id="bookquantity" name="bookquantity" min="1"
-                                value="1">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Title</span>
                         </div>
-                        <button type="submit" class="btn obs-button-primary mb-2 mx-sm-3">Add to Cart</button>
-                    </form>
+                        <input type="text" class="form-control" id="basic-title" aria-describedby="basic-addon3" placeholder="">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">ISBN</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-isbn" aria-describedby="basic-addon3">
+                    </div>
+                    <div class="input-group mb-3">
+                        <label class="sr-only" for="inlineFormCustomSelect">Category</label>
+                        <select class="custom-select" id="inlineFormCustomSelect">
+                            <option selected>Select Category...</option>
+                            <option value="1">Computer</option>
+                            <option value="2">Math</option>
+                            <option value="3">Chemistry</option>
+                        </select>
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Authors</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-author" aria-describedby="basic-addon3" placeholder="John, Bob, Steve">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Edition</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-edition" aria-describedby="basic-addon3" placeholder="">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Publisher</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-publisher" aria-describedby="basic-addon3" placeholder="">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Publication Year</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-year" aria-describedby="basic-addon3" placeholder="">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Quantity-in-Stock</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-stock" aria-describedby="basic-addon3" placeholder="">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Minimum Threshold</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-threshold" aria-describedby="basic-addon3" placeholder="">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Buying Price</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-buy" aria-describedby="basic-addon3" placeholder="">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon3">Selling Price</span>
+                        </div>
+                        <input type="text" class="form-control" id="basic-sell" aria-describedby="basic-addon3" placeholder="">
+                    </div>
                 </div>
-                <ul>
-                    <li>ISBN-10: 1537713949</li>
-                    <li>ISBN-13: 978-1537713946</li>
-                    <li>Category: Programming</li>
-                    <li>Author: Adnan Aziz </li>
-                    <li>Edition: 2nd</li>
-                    <li>Publisher: CreateSpace Independent Publishing Platform</li>
-                    <li>Publication Year: September 15, 2016</li>
-                    <li>Quantity-in-Stock: 5,000</li>
-                    <li>Minimum Threshold: 1</li>
-                    <li>Selling Price: $14.99</li>
-                </ul>
+                <button type="button" class="btn obs-button-primary btn-lg btn-block">Add Book</button>
             </div>
         </div>
     </main>
