--- a/templates/bookstore/admin-manage-user-edit.html
+++ b/templates/bookstore/admin-manage-user-edit.html
@@ -93,42 +93,45 @@
     <main>
         <div class="container obs-container">
             <form>
-                <h2>Register</h2>
+                <h2>Edit User</h2>
                 <hr>
-                <h3>Account Info (Required)</h3>
+                <h3>Account Info</h3>
                 <div class="form-row">
-                    <div class="col-md-6 mb-3">
+                    <div class="col-md-4 mb-3">
                         <label for="validationDefault01">First name</label>
                         <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
-                            value="" required>
+                            value="John" required>
                     </div>
-                    <div class="col-md-6 mb-3">
+                    <div class="col-md-4 mb-3">
                         <label for="validationDefault02">Last name</label>
                         <input type="text" class="form-control" id="validationDefault02" placeholder="Last name"
-                            value="" required>
+                            value="Doe" required>
                     </div>
-                    <div class="col-md-12 mb-3">
-                        <label for="phone-number">Phone number</label>
-                        <input type="tel" id="phone" class="form-control" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required="">
-                        <div class="invalid-feedback">
-                            Format: 123-456-7890
+                    <div class="col-md-4 mb-3">
+                        <label for="validationDefaultUsername">Username</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                            </div>
+                            <input type="text" class="form-control" id="validationDefaultUsername"
+                                placeholder="Username" aria-describedby="inputGroupPrepend2" value="jDoe" required>
                         </div>
                     </div>
                     <div class="col-md-12 mb-3">
-                        <label for="InputEmail1">Email</label>
-                            <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
-                                placeholder="Enter email" required>
+                        <label class="sr-only" for="inlineFormCustomSelect">User Group</label>
+                        <select class="custom-select" id="inlineFormCustomSelect">
+                            <option selected>Registered User</option>
+                            <option value="1">Administrator</option>
+                            <option value="2">Suspended User</option>
+                            <option value="3">Employee</option>
+                        </select>
                     </div>
-                    <div class="col-md-12 mb-3">
-                        <label for="inputPassword">Password</label>
-                            <input type="password" class="form-control" id="inputPassword" placeholder="Password" required>
-                    </div>
-                    <div class="col-md-12 mb-3">
-                        <label for="inputPassword">Password Again</label>
-                            <input type="password" class="form-control" id="inputPassword" placeholder="Password" required>
+                    <div class="custom-control custom-checkbox" style="padding-bottom: 15px;">
+                        <input type="checkbox" class="custom-control-input" id="promote" checked>
+                        <label class="custom-control-label" for="promote">Sign up for promotions and lattest news.</label>
                     </div>
                 </div>
-                <h3>Address Info (Optional)</h3>
+                <h3>Address Info</h3>
                 <div class="form-group">
                     <label for="inputAddress">Address</label>
                     <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
@@ -152,10 +155,10 @@
                         <input type="text" class="form-control" id="inputZip" placeholder="30602">
                     </div>
                 </div>
-                <h3>Payment Info (Optional)</h3>
+                <h3>Payment Info</h3>
                 <div class="mb-3">
                     <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address" placeholder="1234 Main St">
+                    <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
                     <div class="invalid-feedback">
                         Please enter your shipping address.
                     </div>
@@ -186,50 +189,84 @@
                     <label class="custom-control-label" for="same-address">Shipping address is the same as my billing
                         address</label>
                 </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="save-info">
+                    <label class="custom-control-label" for="save-info">Save this information for next time</label>
+                </div>
                 <hr class="mb-4">
 
                 <h4 class="mb-3">Payment</h4>
 
                 <div class="d-block my-3">
                     <div class="custom-control custom-radio">
-                        <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="">
+                        <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked=""
+                            required="">
                         <label class="custom-control-label" for="credit">Credit card</label>
                     </div>
                     <div class="custom-control custom-radio">
-                        <input id="debit" name="paymentMethod" type="radio" class="custom-control-input">
+                        <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
                         <label class="custom-control-label" for="debit">Debit card</label>
                     </div>
                     <div class="custom-control custom-radio">
-                        <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input">
+                        <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
                         <label class="custom-control-label" for="paypal">Paypal</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="cc-name">Name on card</label>
-                        <input type="text" class="form-control" id="cc-name" placeholder="">
+                        <input type="text" class="form-control" id="cc-name" placeholder="" required="">
                         <small class="text-muted">Full name as displayed on card</small>
+                        <div class="invalid-feedback">
+                            Name on card is required
+                        </div>
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="cc-number">Credit card number</label>
-                        <input type="text" class="form-control" id="cc-number" placeholder="">
+                        <input type="text" class="form-control" id="cc-number" placeholder="" required="">
+                        <div class="invalid-feedback">
+                            Credit card number is required
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-3 mb-3">
                         <label for="cc-expiration">Expiration</label>
-                        <input type="text" class="form-control" id="cc-expiration" placeholder="">
+                        <input type="text" class="form-control" id="cc-expiration" placeholder="" required="">
+                        <div class="invalid-feedback">
+                            Expiration date required
+                        </div>
                     </div>
                     <div class="col-md-3 mb-3">
                         <label for="cc-expiration">CVV</label>
-                        <input type="text" class="form-control" id="cc-cvv" placeholder="">
+                        <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
+                        <div class="invalid-feedback">
+                            Security code required
+                        </div>
                     </div>
                 </div>
-                <div class="custom-control custom-checkbox" style="padding-bottom: 15px;">
-                    <input type="checkbox" class="custom-control-input" id="promote" checked>
-                    <label class="custom-control-label" for="promote">Sign up for promotions and lattest news.</label>
+                <h3>Account Security</h3>
+                <div class="form-group row">
+                    <label for="staticEmail" class="col-sm-3 col-form-label">Current Email</label>
+                    <div class="col-sm-9">
+                        <input type="text" readonly class="form-control-plaintext" id="staticEmail"
+                            value="email@example.com">
+                    </div>
                 </div>
-                <button type="submit" class="btn obs-button-primary">Submit</button>
+                <div class="form-group row">
+                    <label for="InputEmail1" class="col-sm-3 col-form-label">New Email</label>
+                    <div class="col-sm-9">
+                        <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
+                            placeholder="Enter email">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputPassword" class="col-sm-3 col-form-label">New Password</label>
+                    <div class="col-sm-9">
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    </div>
+                </div>
+                <button type="submit" class="btn obs-button-primary">Save</button>
             </form>
         </div>
     </main>
