--- a/templates/bookstore/search-view.html
+++ b/templates/bookstore/search-view.html
@@ -104,6 +104,10 @@
                 </div>
                 <div class="form-inline" style="width: 100%;padding-left: 15px;">
                     <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox0" value="option0">
+                        <label class="form-check-label" for="inlineCheckbox0">Subject</label>
+                    </div>
+                    <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                         <label class="form-check-label" for="inlineCheckbox1">Book Title</label>
                     </div>
